--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.9",
+    "nanoid": "3.1.22",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
+    "use-immer": "0.5.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
